service part added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!------------- Navbar Start ------------->
+    <!------------- Navbar Area Start ------------->
     <div class="nav-area">
       <div class="container">
         <div class="row">
@@ -65,7 +65,6 @@
             <h1>
               Business has only <br />
               two functions marketing and innovation.
-              <i class="zmdi zmdi-flower-alt"></i>
             </h1>
             <p>
               Traffic is a great platform to stand out your website. So try now.
@@ -82,6 +81,149 @@
           </div>
           <div class="col-md-6 text-end">
             <img src="images/hero.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!------------- Services Area Start ------------->
+    <div class="services-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 offset-md-3 text-center">
+            <div class="section-title">
+              <h2>Some of Our Services</h2>
+              <p>
+                Conveniently whiteboard ubiquitous niche markets and accurate
+                collaboration. <br />
+                Holisticly supply client-focused models B2B processes.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>Online Marketing</h3>
+              <p>
+                Impact scalab niche markets rather than collabora Interactively
+                optimize fully tested data with Dramatically grow
+                enterprise-wide
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>Marketing Research</h3>
+              <p>
+                Professionally pontificate B2B innovation via low-risk
+                high-yield information. Interactively reconceptualize flexible
+                leadership skills
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>Content Submission</h3>
+              <p>
+                Interactively architect frictionless action items with extensive
+                expertise. Phosfluorescently develop user friendly
+                meta-services.
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>Advanced Analytics</h3>
+              <p>
+                Recaptiualize just in time alignments before accurate mindshare.
+                enhance leveraged infomed without best-of-breed content .
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>PPC Management</h3>
+              <p>
+                Kectively underwhelm maintainable architectures through parallel
+                process improvements. Rapidiously expedite user
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="zmdi zmdi-mouse"></i>
+              </div>
+              <h3>Social Media Services</h3>
+              <p>
+                Distinctively engage transparent networks without client-centric
+                manufactured products. Monotonectally actualize
+              </p>
+              <a href="" class="btn-read-more"
+                >Read More
+                <i class="zmdi zmdi-long-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <div class="pdt-50">
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="pdt-50">
+                    <h2>Transparency of Online Marketing Efforts from us</h2>
+                    <p>
+                      Conveniently whiteboard ubiquitous niche markets and
+                      accurate collaboration and idea-sharing. Holisticly supply
+                      client-focused models vis-a-vis B2B processes.
+                    </p>
+                    <a href="" class="btn-primary">How it works</a>
+                  </div>
+                </div>
+                <div class="col-md-7 text-e">
+                  <img src="images/service.png" alt="" />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
